--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ python:
   - "3.4"
 
 before_install:
-  - apt-get install libmecab-dev
+  - sudo apt-get install libmecab-dev
 
 install:
-  - python setup.py install
+  - sudo python setup.py install
 
 script:
   - python test.py
